--- a/Pages/DetailSessions.xaml
+++ b/Pages/DetailSessions.xaml
@@ -1,12 +1,24 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MauiApp1.Pages.DetailSessions"
+             x:Class="MauiApp1.DetailSessions"
              Title="DetailSessions">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+
+    <StackLayout>
+        <Label Text="Current Session Notes" FontSize='20' />
+        <Entry x:Name="CurrentSessionNotesEntry" Placeholder="Enter current session notes"/>
+
+
+        <Label Text="Next Session Notes" FontSize='20' />
+        <Entry x:Name="NextSessionNotesEntry" Placeholder="Enter next session notes"/>
+
+
+        <Label Text="Custom Notes" FontSize='20' />
+        <Entry x:Name="CustomNotesEntry" Placeholder="Enter custom notes"/>
+    
+
+        <Button Text="Save" Clicked="SaveButton_Clicked" HorizontalOptions="Center" />
+
+    </StackLayout>
+
 </ContentPage>
