--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -9,35 +9,29 @@
 
     <TabBar>
         <Tab
-            Title = "Home">
-            <ShellContent ContentTemplate="{DataTemplate local:HomePage}" />
+            Icon="home.png" >
+        <ShellContent ContentTemplate="{DataTemplate local:HomePage}" />
             
         </Tab>
 
         <Tab
-            Title = "Dogs">
+            Icon = "dogs.png">
             <ShellContent ContentTemplate="{DataTemplate local:DogsPage}" />
 
         </Tab>
 
         <Tab
-            Title = "Account">
-            <ShellContent ContentTemplate="{DataTemplate local:AccountPage}" />
-
-        </Tab>
-
-        <Tab
-            Title = "Behavior Page">
+            Icon = "behaviors.png">
             <ShellContent ContentTemplate="{DataTemplate local:BehaviorPage}" />
 
         </Tab>
         <Tab
-            Title = "General">
+            Icon = "general.png">
             <ShellContent ContentTemplate="{DataTemplate local:General}" />
 
         </Tab>
     <Tab
-        Title = "Testing Page">
+        Icon = "calendaricon.png">
             <ShellContent ContentTemplate="{DataTemplate local:TrainerBioPage}" />
 
         </Tab>
